--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplicatio">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -9,11 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicatio">
-        <activity android:name=".loginActivity"></activity>
-        <activity android:name=".coursesActivity" />
-        <activity android:name=".CoursesActivity" />
-        <activity android:name=".programActivity2" />
-        <activity android:name=".MainActivity">
+        <activity android:name="ui.loginActivity"></activity>
+        <activity android:name="ui.coursesActivity" />
+        <activity android:name="ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
