--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicatio">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true" />
         <activity android:name="ui.loginActivity" />
         <activity android:name="ui.coursesActivity" />
-        <activity android:name="ui.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
     </application>
 
 </manifest>
