--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplicatio">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,23 +9,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplicatio">
+        android:theme="@style/Theme.MyApplicatio"
+        tools:targetApi="m">
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
+            android:name=".ui.CoursesActivity"
+            android:theme="@style/Theme.MyApplicatio"/>
+        <activity android:name=".ui.loginActivity"
+            android:parentActivityName=".ui.MainActivity"/>
+
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true" />
-        <activity android:name="ui.loginActivity" />
-        <activity android:name="ui.coursesActivity" />
-
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
